Section 4 - Fix text-align and clean up duplicate settings.

--- a/styles.css
+++ b/styles.css
@@ -145,19 +145,17 @@ body {
 }
 
 .background-story {
-  display: flex;
   grid-column: 2 / span 3;
   grid-row: 1;
-  word-wrap: break-word;
+  display: flex;
+  padding: 30px;
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
-  align-items: center; /* REMOVE does not apply to text */
-  justify-content: center; /* REMOVE does not apply to text */
-  padding: 30px;
+  word-wrap: break-word;
 }
 
-.factoid {
+.factoid { 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -178,8 +176,4 @@ body {
 #factoid3 {
   grid-column: 4;
   grid-row: 2;
-}
-
-.factoid p {
-  word-wrap: break-word;
 }
